 - git tag -a v0.x.x -m "v0.x.x - summary"
 - git push
 - git push --tags
 - mix hex.publish

# CHANGELOG

## v0.*.*

### Enhancements

 - added Chunky.CacheAgent - caching agent for particularly recursive functions
 - Chunky.Math
  - ramanujan_tau/1 - Find the ramanujan tau error value for `n`
  - partition_count/1 - Recursive (and cached) Partition Function for `n`
  
  
### New Sequences

   - A000001 - Number of groups of order n
   - A000043 - Mersenne exponents: primes p such that 2^p - 1 is prime.
   - A000105 - Number of free polyominoes (or square animals) with n cells
   - A000109 - Number of simplicial polyhedra with n nodes
   - A000112 - Number of partially ordered sets ("posets") with n unlabeled elements
   - A000609 - Number of threshold functions of n or fewer variables
   - A000798 - Number of different quasi-orders (or topologies, or transitive digraphs) with n labeled elements
   - A002106 - Number of transitive permutation groups of degree n
   - A003094 - Number of unlabeled connected planar simple graphs with n nodes
   - A005470 - Number of unlabeled planar simple graphs with n nodes
   - A006966 - Number of lattices on n unlabeled nodes
   - A055512 - Lattices with n labeled elements
   - updated A000041 - Partitions of `n` is now calculated, instead of list based
    

## v0.10.0

```
OEIS Coverage
        144 total sequences
By Module
        Elixir.Chunky.Sequence.OEIS - 3 sequences
        Elixir.Chunky.Sequence.OEIS.Core - 24 sequences
        Elixir.Chunky.Sequence.OEIS.Factors - 96 sequences
        Elixir.Chunky.Sequence.OEIS.Primes - 1 sequences
        Elixir.Chunky.Sequence.OEIS.Sigma - 20 sequences
Sequence Groups
        OEIS Core Sequences - 25 / 177 (14.12%)
```

### Enhancements

 - Chunky.Math
  - jordan_totient/2 - Jordan totient `J-k(n)`
  - mobius_function/1 - Classical mobius function
  - omega/1 - Count of distinct prime factors
  - bigomega/1 - Count of distinct prime factors, with multiplicity